# hackprinceton

./: .env.example  .gitignore  README.md
companion/: pyproject.toml
companion/companion/: main.py  models.py  settings.py  validate.py
companion/companion/adapters/: __init__.py  adeept.py  base.py  mock.py
companion/companion/bindings/: dispatcher.py  matcher.py  store.py
companion/companion/events/: recent.py
companion/companion/inputs/: __init__.py  audio.py  base.py  camera.py  keyboard.py  registry.py  speech.py
companion/companion/planner/: prompts.py  service.py
companion/companion/routes/: bindings.py  events.py  execute.py  fallback.py  health.py  inputs.py  manifest.py  plan.py
docs/: AGENTS.md  architecture-proposal.md  build-spec.md  pitch.md  project-brief-for-pm.md  quoridor-demo-feasibility-and-framework.md  quoridor-workstreams-and-contracts.md
examples/: bindings.example.json  input_event_schema.json  manifest.adeept.json  plan.fallback.json  plan.invalid.json  plan.valid.json
scripts/: test_speech.py
web/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
web/src/: App.tsx  api.ts  index.css  main.ts  main.tsx  state.ts  types.ts
web/src/components/: BindingPanel.ts  BlockList.ts  Header.tsx  PlanForm.ts  ReasoningStream.ts
web/src/components/ConversationPane/: ClarificationCard.tsx  Composer.tsx  ConversationPane.tsx  MicButton.tsx  TurnList.tsx
web/src/hooks/: useEventStream.ts
web/src/lib/: friendly.ts
web/src/state/: store.ts
(+8 files in other folders)
