[project]
name = "companion"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.0.0",
    "anthropic>=0.39.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# Hardware input adapters — install only on the machine with the peripherals
inputs = [
    "pynput>=1.7.6",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["companion"]
